# calculator

./: .coverage  .scrutinizer.yml  LICENSE  README.md  pyproject.toml  tox.ini  unzip.sh
.github/workflows/: tests.yml
calculator/: __init__.py  absolute.py  add.py  divide.py  main.py  multiply.py  power.py  sub.py
calculator/absolute/: __init__.py  absolute.py
calculator/addition/: __init__.py  add.py
calculator/division/: __init__.py  divide.py
calculator/multiplication/: __init__.py  multiply.py
calculator/power/: __init__.py  power.py
calculator/subtraction/: __init__.py  sub.py
deploy/: run_script.sh
docs/: calculator.absolute.rst  calculator.addition.rst  calculator.division.rst  calculator.multiplication.rst  calculator.power.rst  calculator.rst  calculator.subtraction.rst  conf.py  index.rst
tests/: test_add.py  test_calculator.py
