[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
description = "Basic calculator application to learn python distribution"
# readme = "README.rst"
requires-python = ">=3.7"
keywords = ["test", "args", "pytest", "toml", "mypy", "pylint", "flask"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = []
dynamic = ["version"]

[project.scripts]
run = "calculator.main:main"

[project.optional-dependencies]
build = [
    "build"
]
test = [
    "pylint",
    "mypy",
    "pytest",
    "pytest-cov",
    "tox",
    "flake8",
    "black"
]
doc = [
    'sphinx',
    'sphinx_rtd_theme',
]
